[tool.poetry]
name = "03-deploy-dados-docker"
version = "0.1.0"
description = ""
authors = ["hmaiajunior <juniorce04@gmail.com>"]
readme = "README.md"
#packages = [{include = "03-deploy-dados-docker"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
